--- a/CAR CRASH ANALYSIS.ipynb
+++ b/CAR CRASH ANALYSIS.ipynb
@@ -3036,7 +3036,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "52484c20",
+   "id": "f37a6ebc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3046,7 +3046,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "febf8a40",
+   "id": "fd2f7941",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3056,7 +3056,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "abeab708",
+   "id": "b30b41ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3066,7 +3066,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "400a0f8f",
+   "id": "5a82ea60",
    "metadata": {},
    "outputs": [
     {
@@ -3089,7 +3089,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "bfe50514",
+   "id": "a3178655",
    "metadata": {},
    "outputs": [
     {
@@ -3353,7 +3353,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "ae0973f6",
+   "id": "edf480d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3365,7 +3365,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "8835f673",
+   "id": "1cb000f1",
    "metadata": {},
    "outputs": [
     {
@@ -3397,7 +3397,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "3c5f5e9e",
+   "id": "974b1c95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3408,7 +3408,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "3dd742c0",
+   "id": "d192fa47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3419,7 +3419,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "031572ea",
+   "id": "9c6cf024",
    "metadata": {},
    "outputs": [
     {
@@ -3671,7 +3671,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "fb5083ab",
+   "id": "16c637f8",
    "metadata": {},
    "outputs": [
     {
@@ -3744,7 +3744,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "7fc5f1ed",
+   "id": "84f612b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3754,7 +3754,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "a6716520",
+   "id": "ac98ddf7",
    "metadata": {},
    "outputs": [
     {
@@ -3819,8 +3819,78 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 125,
+   "id": "afb689c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "car2009=car[car[\"Year\"]>=2013]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "id": "a2258d24",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "FAILURE TO YIELD RIGHT OF WAY               2554\n",
+       "FOLLOWING TOO CLOSELY                       2133\n",
+       "UNSAFE BACKING                              1461\n",
+       "RAN OFF ROAD RIGHT                          1027\n",
+       "OTHER (DRIVER) - EXPLAIN IN NARRATIVE        839\n",
+       "SPEED TOO FAST FOR WEATHER CONDITIONS        548\n",
+       "ANIMAL/OBJECT IN ROADWAY                     506\n",
+       "DISREGARD SIGNAL/REG SIGN                    491\n",
+       "IMPROPER TURNING                             476\n",
+       "UNSAFE LANE MOVEMENT                         438\n",
+       "DRIVER DISTRACTED - EXPLAIN IN NARRATIVE     305\n",
+       "UNSAFE SPEED                                 290\n",
+       "LEFT OF CENTER                               244\n",
+       "IMPROPER LANE USAGE                          205\n",
+       "ROADWAY SURFACE CONDITION                    159\n",
+       "OVERCORRECTING/OVERSTEERING                  141\n",
+       "OTHER (VEHICLE) - EXPLAIN IN NARRATIVE       105\n",
+       "IMPROPER PASSING                              96\n",
+       "BRAKE FAILURE OR DEFECTIVE                    73\n",
+       "PEDESTRIAN ACTION                             66\n",
+       "OTHER (ENVIRONMENTAL) - EXPLAIN IN NARR       60\n",
+       "DRIVER ASLEEP OR FATIGUED                     53\n",
+       "VIEW OBSTRUCTED                               40\n",
+       "DRIVER ILLNESS                                38\n",
+       "WRONG WAY ON ONE WAY                          32\n",
+       "TIRE FAILURE OR DEFECTIVE                     18\n",
+       "CELL PHONE USAGE                              15\n",
+       "INSECURE/LEAKY LOAD                           14\n",
+       "OBSTRUCTION NOT MARKED                        12\n",
+       "ACCELERATOR FAILURE OR DEFECTIVE              11\n",
+       "OVERSIZE/OVERWEIGHT LOAD                       9\n",
+       "ENGINE FAILURE OR DEFECTIVE                    7\n",
+       "HEADLIGHT DEFECTIVE OR NOT ON                  5\n",
+       "OTHER TELEMATICS IN USE                        5\n",
+       "STEERING FAILURE                               4\n",
+       "TRAFFIC CONTROL INOPERATIVE/MISSING/OBSC       3\n",
+       "TOW HITCH FAILURE                              2\n",
+       "HOLES/RUTS IN SURFACE                          2\n",
+       "OTHER LIGHTS DEFECTIVE                         1\n",
+       "Name: Primary Factor, dtype: int64"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "car2009[\"Primary Factor\"].value_counts()"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "1d0e6b3e",
+   "id": "73123763",
    "metadata": {},
    "source": [
     "# Conclusion"
@@ -3828,18 +3898,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b695d265",
+   "id": "d4048449",
    "metadata": {},
    "source": [
     "- weekdays time after 3pm is more prone to accidents as the reason may be the traffic rush after office hours ,school hours etc,there are chances for the driver to be fatigue and the short distancing also\n",
     "- weekends also there are accidents but comparitively less ... weekend accidents mainly will be because of teenage drivers and the main time with more accidents is 12pm .... after long sleep people will be starting their day by this time increasing traffic rush ... the main reasons are failure to yield right of way , other driver , improper backing etc\n",
     "- october was the month with more number of accidents the reasons might be more holidays , festivals like halloween etc\n",
-    "- fatal injuries are comparitively less but incapacitating are there for 20% , more are with very less or no injuries\n"
+    "- fatal injuries are comparitively less but incapacitating are there for 20% , more are with very less or no injuries\n",
+    "- as the data is a bit old the primary factor seen as missing the deviation may be becz the use of navigation in smart fones were in the late 2000's it wont be much popular that times"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "50dcfbab",
+   "id": "6039e0e5",
    "metadata": {},
    "source": [
     "### inference"
@@ -3847,18 +3918,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51c808e7",
+   "id": "db23834f",
    "metadata": {},
    "source": [
     "- from the above conclusions the time of accidents is at 3pm , so more traffic safety rules can be implied during that time\n",
     "- october is the month with more number of accidents every year which tells us the festival season , holiday and change of weather from summer to fall increases the chances ... the roads can be checked for slippery skid and all during these month to avoid it\n",
-    "- failure to yield the right way also causes the main accidents reason, if a sign for turning can be kept a mile back people can check and be informative so that they can be aware"
+    "- failure to yield the right way also causes the main accidents reason, if a sign for turning can be kept a mile back people can check and be informative so that they can be aware\n",
+    "- google maps with more informations can be useful to decrease this sort of accidents\n",
+    "- use of public transport likes buses,metro , trams etc during busy hours can decrease the accidents\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "545ceb9f",
+   "id": "0a194a55",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3866,4 +3939,23 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.9"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
